# tnet

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  activation.c  activation.h  layer.c  layer.h  loss.c  loss.h  mat.c  mat.h  mlp.c  mlp.h  mlp_ex.c  mlp_ex.h  optimizer.c  optimizer.h  perceptron.c  perceptron.h  perceptron_ex.c  perceptron_ex.h
Testing/Temporary/: CTestCostData.txt
data/binary_ops/: and.csv  inputs.csv  model.csv  model_2dim.csv  or.csv  truth_and.csv  truth_or.csv  truth_xor.csv  xor.csv  xor_2dim.csv
data/inputs/: xor.csv
data/models/: basic_ops.csv
data/truths/: xor.csv
include/: cli.h  core.h  examples.h  funcs.h  models.h  reader.h  test.h  train.h
python/: README.md  and.py  mlp_xor.py  or.py  requirements.txt  softmax_backprop.py  xor.py
src/: cli.c  commands.c  intermediate.c  intermediate.h  layer.c  layer.h  loss.c  loss.h  mat.c  mlp.h  mlp_ex.c  optimizer.c  perceptron.c  perceptron.h  test.c  tnet.c  tnet.h  util.c  util.h
src/core/: mat.c  mm.c  prand.c  print.c  tensor.c  tensor_test.c  tnet.c  util.c  vec.c
src/examples/: mlp.c  perceptron.c  perceptron_tensor.c  seqmodel.c
src/funcs/: activation.c  activation_tensor.c  loss.c  loss_binary_cross_entropy.c  loss_mse.c
src/models/: backwardstate.c  dense_layer.c  forwardstate.c  input_layer.c  intermediate.c  layer.c  layerstate.c  mlp.c  perceptron.c  perceptron_tensor.c  seqmodel.c  seqmodel_layer.c  sequential.c
src/models/layers/: dense_layer.c  input_layer.c  softmax_layer.c
src/reader/: csv.c  model.c  tensor.c
src/train/: adam.c  check_gradients.c  optimizer.c  sgd.c  shared.c  train.c  train_test.c  trainingpass.c
